--- a/css/style.css
+++ b/css/style.css
@@ -18,10 +18,11 @@ body {
 
 
 .barra{
+  top: 0;
   width: 100%;
-  height: 10%;
+  height: 11.5vh;
     background-color: var(--primary);
-  position: fixed;
+    position: fixed;
     display: flex;
     flex-wrap: wrap;
     align-content: center;
@@ -31,10 +32,14 @@ body {
 }
 
   nav {
+    top: 0;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     position: fixed;
     margin-top: 0;
+
+width: 45%;
+z-index: 1000;
 }
 
 li{
